update Script in app/javascript/packs

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -84,7 +84,7 @@
                     background-color: #003049 !important;
                 }
                 .room_status_dirty {
-                    background-color: #fdf0d5 !important;
+                    background-color: #ff9248 !important;
                 }
             }
         }
@@ -295,7 +295,7 @@
                             background-color: #003049 !important;
                         }
                         .room_status_dirty {
-                            background-color: #fdf0d5 !important;
+                            background-color: #ff9248 !important;
                         }
                     }
                 }
@@ -334,7 +334,7 @@
                 background-color: #003049 !important;
             }
             .room_status_dirty {
-                background-color: #fdf0d5 !important;
+                background-color: #ff9248 !important;
             }
         }
         p {
