--- a/app/views/room_types/index.html.erb
+++ b/app/views/room_types/index.html.erb
@@ -74,112 +74,4 @@
     </div>
 </div>
 
-<script>
-    let selectedID;
-    let allRoomTypes = document.querySelectorAll(".roomType_row");
-    let allButtonNotClick = document.querySelectorAll(".functionality_item");
-    let filterByString = '';
-    let filterByBeds = [
-        {
-            label: "1 giường",
-            status: false
-        },
-        {
-            label: "2 giường",
-            status: false
-        },
-        {
-            label: "3 giường",
-            status: false
-        },
-    ];
-    // RenderFilterBedsCheckboxes
-    filterByBeds.forEach((e,i) => {
-        let divTag = document.createElement("div");
-        divTag.setAttribute("class", "boloc_item");
-        divTag.innerHTML = `
-            <input class="boloc_checkbox" type="checkbox"/>
-            <span class="boloc_label">${e.label}</span>
-        `
-        divTag.addEventListener('change', function() {
-            filterByBeds[i].status = this.querySelector(".boloc_checkbox").checked;
-            updateTable();
-        });
-        document.querySelector("#boloc_roomType_beds").append(divTag);
-        
-    })
-    
-    for(let i=0; i<allRoomTypes.length; i++){
-        allRoomTypes[i].addEventListener('click', function(){
-            for (let previousSelectedRow of document.querySelectorAll(".row_selected")) {
-                previousSelectedRow.classList.remove("row_selected");
-            }
-            
-            selectedID = allRoomTypes[i].querySelector(".roomType_row_id").innerHTML * 1;
-            this.classList.add("row_selected");
-            for(let i=0; i<allButtonNotClick.length; i++){
-                allButtonNotClick[i].classList.remove("functionality_item");
-                allButtonNotClick[i].classList.add("button_selected");
-            }
-        });
-    }
-
-    document.querySelector("#roomType_btn_edit").addEventListener('click', function(){
-        if (selectedID > 0) {
-            window.location = `${window.location}/${selectedID}/edit`;
-        }
-        
-    });
-    document.querySelector("#roomType_btn_show").addEventListener('click', function(){
-        if (selectedID > 0) {
-            window.location = `${window.location}/${selectedID}`;
-        }
-    });
-
-    function isUsingFilterBeds(){
-        for(let i=0; i<filterByBeds.length; i++){
-            if(filterByBeds[i].status) return true;
-        }
-        return false;
-    }
-    function isUsingFilterAvailable(){
-        for(let i=0; i<filterByAvailable.length; i++){
-            if(filterByAvailable[i].status) return true;
-        }
-        return false;
-    }
-
-    document.querySelector("#roomType_input_filter").addEventListener('input', function(e){
-        filterByString = e.target.value;
-        updateTable();
-    });
-
-    function updateTable(){
-        let hasAtLeastOneMatchedRow = false;
-        for(let i=0; i<allRoomTypes.length; i++){
-            
-            let tRow = allRoomTypes[i];
-            let tColumnDescription = tRow.querySelector(".roomType_row_description").innerHTML;
-            let tColumnBeds = tRow.querySelector(".roomType_row_beds").innerHTML * 1;
-            let tColumnAvailable = tRow.querySelector(".roomType_row_available").innerHTML * 1;
-
-            if(!(tColumnDescription.toLowerCase().includes(filterByString.toLowerCase()))
-                && filterByString.length > 0){
-                tRow.classList.add("hide_row");
-            }
-            else if((!filterByBeds[tColumnBeds-1].status && isUsingFilterBeds())){
-                tRow.classList.add("hide_row");
-            }
-            else{
-                tRow.classList.remove("hide_row");
-                hasAtLeastOneMatchedRow = true;
-            }
-        }
-        
-        if (hasAtLeastOneMatchedRow) {
-            document.querySelector("#roomType_row_empty").classList.add("hide_empty");
-        }else{
-            document.querySelector("#roomType_row_empty").classList.remove("hide_empty");
-        }
-    }
-</script>
+<%= javascript_pack_tag 'room_type' %>
