--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -29,7 +29,7 @@
       <% room = Room.find(reservation.room_id) %>
       <%  room_name = room.name %>
       <%  price = RoomPrice.find(RoomType.find(Room.find(reservation.room_id).room_type_id).id).price %>
-      <% room_status = @room_statuses[reservation.status - 1][:text] %>
+      <% reservation_status = @reservation_statuses[reservation.status - 1][:text] %>
 
       <% client_name = reservation.client_name %>
 
@@ -57,7 +57,7 @@
                 <br>
                 <%= client_name %> | <%= arrival_date %> - <%= leave_date %>
                 <br>
-                Trạng thái: <%= room_status %>
+                Trạng thái: <%= reservation_status %>
               </div>
               <div class="col-lg-3">
                 <div class="row">
