--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Trạng thái</strong>
-  <%=  @room_statuses[@reservation.status - 1][:text] %>
+  <%=  @reservation_statuses[@reservation.status - 1][:text] %>
 </p>
 <p>
   <strong>Tên khách hàng</strong>
