--- a/app/views/room_diagram/index.html.erb
+++ b/app/views/room_diagram/index.html.erb
@@ -6,7 +6,7 @@
       <div class="col-sm-6">
         <div class="d-flex justify-content-start">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><%= link_to "Lễ Tân", room_diagram_path %></li>
+            <li class="breadcrumb-item"><%= link_to "Trang chủ", root_path %></li>
             <li class="breadcrumb-item" aria-current="page"><a>Sơ đồ phòng</a></li>
           </ol>
         </div>
