--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,52 +1,6 @@
+<h1>Chỉnh sửa</h1>
 
-<%  room_name = Room.find(@reservation.room_id).name %>
-<%  reservation_date = Payment.find(@reservation.payment_id).reservation_date %>
-<%  reservation_date = reservation_date.strftime("%d/%m/%Y") %>
-<%  arrival_date = @reservation.arrival_date %>
-<%  arrival_date = arrival_date.strftime("%d/%m/%Y") %>
-<%  leave_date = @reservation.leave_date %>
-<%  leave_date = leave_date.strftime("%d/%m/%Y") %>
-<%  price = RoomPrice.find(RoomType.find(Room.find(@reservation.room_id).id).id).price %>
-<%  deposit = Payment.find(@reservation.payment_id).deposit %>
-<%  total = Payment.find(@reservation.payment_id).temp_total %>
-
-
-<%= form_with(model: @reservation) do |reservation| %>
-  <% if @reservation.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@reservation.errors.count, "error") %> prohibited this @reservation from being saved:</h2>
-
-      <ul>
-        <% @reservation.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-<div class="card">
-  <div class="card-body">
-    <p>Trạng thái đặt phòng:</p>
-    <%= reservation.select :status, options_for_select(@reservation_statuses_view), {}, class: "form-select read-only-white" %>
-
-    <%= reservation.fields_for :room_attributes, Room.new do |room| %>
-      <div class="field">
-        <p>Trạng thái phòng:</p>
-        <%= room.select :status, options_for_select(@room_statuses_view), {}, class: "form-select read-only-white" %>
-      </div>
-
-    <% end %>
-
-  </div>
-</div>
-
-  <div class="actions">
-    <%= reservation.submit %>
-  </div>
-
-<% end %>
+<%= render 'edit_form', reservation: @reservation %>
 
 <%= link_to 'Show', @reservation %> |
-<%= link_to 'Back', reservations_path %>
-
-<script>
-</script>
+<%= link_to 'Back', integer_parameters_path %>
