--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Đặt phòng cho khách lẻ</h1>
 
-<%= render 'form', reservation: @reservation %>
+<%= render 'new_form', reservation: @reservation %>
 
 <%= link_to 'Back', reservations_path %>
 
