--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -47,7 +47,7 @@
 <%= link_to "Back", :back %> -->
 <center>
   <div class="row justify-content-center">
-    <p class="col-xl-2 col-sm-3 col-4">Employee ID : </p>
+    <p class="col-xl-2 col-sm-3 col-4 user_name_input">Mã nhân viên </p>
     <div class="col-xl-3 col-sm-5 col-8 form-group">
       <%= current_user.employee_id %>
     </div>
@@ -55,7 +55,7 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class="row justify-content-center">
-      <p class="col-xl-2 col-sm-3 col-4">Email : </p>
+      <p class="col-xl-2 col-sm-3 col-4 user_name_input">Email </p>
       <div class="col-xl-3 col-sm-5 col-8 form-group">
         <%= f.email_field :email, autofocus: true, autocomplete: "email" , class:"form-control"%>
       </div>
@@ -64,22 +64,22 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
     <div class="row justify-content-center">
-      <p class="col-xl-2 col-sm-3 col-4">Current password : </p>
+      <p class="col-xl-2 col-sm-3 col-4 user_name_input">Mật khẩu hiện tại </p>
       <div class="col-xl-3 col-sm-5 col-8 form-group">
         <%= f.password_field :current_password, autocomplete: "current-password" , class:"form-control"%>
       </div>
     </div>
     <div class="row justify-content-center">
-      <p class="col-xl-2 col-sm-3 col-4">Password : </p>
+      <p class="col-xl-2 col-sm-3 col-4 user_name_input">Mật khẩu mới </p>
       <div class="col-xl-3 col-sm-5 col-8 form-group">
         <%= f.password_field :password, autocomplete: "new-password" , class:"form-control"%>
         <% if @minimum_password_length %>
-        <em><%= @minimum_password_length %> characters minimum</em>
+        <em>ít nhất <%= @minimum_password_length %> kí tự</em>
         <% end %>
       </div>
     </div>
     <div class="row justify-content-center">
-      <p class="col-xl-2 col-sm-3 col-4">Confirm password : </p>
+      <p class="col-xl-2 col-sm-3 col-4 user_name_input">Nhập lại mật khẩu mới </p>
       <div class="col-xl-3 col-sm-5 col-8 form-group">
         <%= f.password_field :password_confirmation, autocomplete: "new-password" , class:"form-control"%>
       </div>
@@ -93,4 +93,5 @@
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+<!-- <%= link_to "Back", :back %> -->
+<%= link_to :back do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %>
