--- a/app/views/reservations/_edit_step1.html.erb
+++ b/app/views/reservations/_edit_step1.html.erb
@@ -1,4 +1,4 @@
-<h5>Bước 1: Đăng ký phòng</h5>
+<h5>Phòng đã đăng ký</h5>
 <div class="row">
   <div class="col-lg-6 row">
     <div class="row end-row-md">
