--- a/app/views/reservations/_edit_step2.html.erb
+++ b/app/views/reservations/_edit_step2.html.erb
@@ -1,5 +1,5 @@
 <%= form.fields_for :payment_attributes, Payment.new do |p| %>
-  <h5>Bước 2: Đăng ký thông tin khách hàng</h5>
+  <h5>Thông tin khách hàng</h5>
   <%= p.fields_for :client_attributes, Client.new do |client| %>
     <div class="row">
       <div class="col-lg-6 row">
@@ -85,7 +85,7 @@
     </div>
   <% end %>
 
-  <h5>Bước 3: Thanh toán</h5>
+  <h5>Tổng tiền n</h5>
 
   <div class="row">
     <div class="col-lg-6 row">
