--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <!-- <h2>Edit <%= resource_name.to_s.humanize %></h2>
 <div>
   Employee ID:
-  <%= current_user.employee_id %>
+  <%= Employee.find(current_user.employee_id).name  %>
 
 </div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -42,14 +42,16 @@
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%#= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %> -->
+
+<h2 class="p-3">Edit Profile</h2>
 <center>
   <div class="row justify-content-center">
-    <p class="col-xl-2 col-sm-3 col-4 user_name_input">Mã nhân viên </p>
+    <p class="col-xl-2 col-sm-3 col-4 user_name_input">Tên </p>
     <div class="col-xl-3 col-sm-5 col-8 form-group">
-      <%= current_user.employee_id %>
+      <%= Employee.find(current_user.employee_id).name  %>
     </div>
   </div>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -85,13 +87,13 @@
       </div>
     </div>
     <div class="actions tBotton">
-      <%= f.submit "Update"  => 'btn btn-primary'%>
+      <%= f.submit "Update", class:'btn btn-primary'%>
     </div>
   <% end %>
 </center>
-<h3>Cancel my account</h3>
+<!--<h3>Cancel my account</h3>-->
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<!--<p>Unhappy? <%#= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>-->
 
 <!-- <%= link_to "Back", :back %> -->
 <%= link_to :back do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %>
