--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,70 @@
+<% stylesheet_link_tag 'home' %>
+
 <div>
-  <h1 class="h-100 d-flex justify-content-center">Welcome to our page !</h1>
+<!--  <h1 class="h-100 d-flex justify-content-center">Welcome to our page !</h1>-->
   <div class="h-100 d-flex justify-content-center">
-   <img src="https://previews.123rf.com/images/artinspiring/artinspiring1911/artinspiring191100576/133875813-vector-illustration-of-welcoming-concept-greeting-for-new-business-team.jpg"/>
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <%= image_tag("4207.png", class:"w-100") %>
+          <div class="carousel-caption d-none d-md-block">
+<!--            <h5 class="text-black">Chào mừng bạn !</h5>-->
+            <p>Đây là ứng dụng giúp bạn quản lý và đặt phòng tiện lợi !</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag("2346824.png", class:"w-100") %>
+          <div class="carousel-caption d-none d-md-block">
+<!--            <h5>Second slide label</h5>-->
+<!--            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
+          </div>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag("10811.png", class:"w-100") %>
+
+          <div class="carousel-caption d-none d-md-block">
+<!--            <h5>Third slide label</h5>-->
+<!--            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
+          </div>
+        </div>
+        <div class="carousel-item">
+          <%= image_tag("3622092.png", class:"w-100") %>
+
+          <div class="carousel-caption d-none d-md-block">
+<!--            <h5>Third slide label</h5>-->
+<!--            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
+
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        // jQuery.fn.carousel.Constructor.TRANSITION_DURATION = 3000  // 2 seconds
+
+        $('.carousel').carousel({
+            interval: 2500
+        })
+        $('.breadcrumb').hide()
+    });
+</script>
+
+<style>
+
+</style>
