--- a/app/views/reservations/_edit_step2.html.erb
+++ b/app/views/reservations/_edit_step2.html.erb
@@ -102,7 +102,8 @@
       <div class="row">
         <p class="col-lg-3">Hình thức TT</p>
         <div class="col-lg-7 form-group">
-          <%= p.select :payment_type, options_for_select(@payment_type_view), {}, class: "form-select read-only-white" %>
+
+          <%#= p.select :payment_type, options_for_select(@payment_type_view), {}, class: "form-select read-only-white" %>
           <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
         </div>
       </div>
