--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Chỉnh sửa đặt phòng</h1>
 
-<%#= render 'edit_form', reservation: @reservation %>
+<%= render 'edit_form', reservation: @reservation %>
 
 <%= link_to 'Show', @reservation %> |
 <%= link_to 'Back', integer_parameters_path %>
