--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,13 +2,13 @@
 <%= stylesheet_link_tag "sign_up" %>
 
 <div class="limiter">
-  <div class="container-login100" style="background-image: url('https://images.unsplash.com/photo-1517840901100-8179e982acb7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');">
+  <div class="container-login100" >
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "login100-form validate-form"}) do |f| %>
-					<span class="login100-form-title p-b-49">
-						Chào mừng !
-					</span>
+<!--					<span class="login100-form-title p-b-49">-->
+<!--						Chào mừng !-->
+<!--					</span>-->
 
         <div class="wrap-input100 alidate-input m-b-23" data-validate = "Valid email is required: ex@abc.xyz">
           <%= f.label :email, class: "label-input100" %><br />
@@ -49,9 +49,9 @@
           </div>
         </div>
 
-        <div class="flex-col-c p-t-155">
-          <%= render "devise/shared/links" %>
-        </div>
+<!--        <div class="flex-col-c p-t-155">-->
+          <%#= render "devise/shared/links" %>
+<!--        </div>-->
       <% end %>
     </div>
   </div>
