--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -35,7 +35,15 @@
 
         <div class="wrap-input100 validate-input employees-dropdown">
           <%= f.label :Employee, class: "label-input100" %><br />
-          <%= f.collection_select(:employee_id, Employee.all, :id, :name, {include_blank: false}, { class: "btn btn-light dropdown-toggle" })  %>
+          <% if params[:employee_id]  %>
+            <% employee_id = params[:employee_id] %>
+            <% employee = Employee.find(employee_id) %>
+            <%= f.label employee.name, class:"form-control", readonly:true, id:"room_type" %>
+          <% else %>
+            <%= f.collection_select(:employee_id, Employee.all, :id, :name, {include_blank: false}, { class: "btn btn-light dropdown-toggle" })  %>
+          <% end %>
+
+
         </div>
         <div style="height: 50px">
 
