--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -79,7 +79,7 @@
     <div class="col-xl-5 row">
       <p class="col-xl-5 col-sm-4 row">Email</p>
       <div class="col-xl-7 col-sm-7 row form-group">
-        <%= form.text_field :email, class:"form-control" %>
+        <%= form.email_field  :email, class:"form-control" %>
       </div>
     </div>
     <div class="col-xl-5 row">
