--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -51,7 +51,7 @@
     <div class="col-xl-5 row">
       <p class="col-xl-5 col-sm-4 row">Email</p> 
       <div class="col-xl-7 col-sm-7 row form-group">
-        <%= form.text_field :email, class:"form-control" %>
+        <%= form.email_field :email, class:"form-control" %>
       </div>
     </div>
   </div>
@@ -70,7 +70,7 @@
                             data: {
                               controller: "flatpickr",
                               flatpickr_date_format: "d-m-Y",
-                              flatpickr_min_date: Time.zone.now
+                              flatpickr_max_date: Time.zone.now
                             },
                             class: "form-select read-only-white",
                             placeholder: "Chọn sinh nhật"%>
