--- a/app/views/room_prices/_form.html.erb
+++ b/app/views/room_prices/_form.html.erb
@@ -30,7 +30,14 @@
   <div class="col-xl-5 row">
       <p class="col-xl-5 col-sm-4 row">Ngày áp dụng</p>
       <div class="col-xl-7 col-sm-7 row form-group">
-        <%= form.text_field :date, class:"form-control" %>
+        <%= form.text_field :date,
+                            data: {
+                              controller: "flatpickr",
+                              flatpickr_date_format: "d-m-Y",
+                              flatpickr_min_date: Time.zone.now
+                            },
+                            class: "form-select read-only-white",
+                            placeholder: "Chọn sinh nhật"%>
       </div>
     </div>
     <div class="col-xl-5 row">
